--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,7 @@
   "builds": [{ "src": "./src/app.js", "use": "@vercel/node" }],
   "routes": [
     { "src": "/", "dest": "/" },
-    { "src": "/user", "dest": "/user" }
+    { "src": "/user", "dest": "/user" },
+    { "src": "/socket.io/socket.io.js", "dest": "/socket.io/socket.io.js" }
   ]
 }
