--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,6 @@
   "routes": [
     { "src": "/", "dest": "/" },
     { "src": "/user", "dest": "/user" },
-    { "src": "/socket.io/socket.io.js", "dest": "/socket.io/socket.io.js" },
-    { "src": "/socket.io", "dest": "node_modules/socket.io/lib/client.js" }
+    { "src": "/assets", "dest": "/assets" }
   ]
 }
