trying to fix the fucking routes

--- a/vercel.json
+++ b/vercel.json
@@ -5,6 +5,6 @@
     { "src": "/", "dest": "/" },
     { "src": "/user", "dest": "/user" },
     { "src": "/assets", "dest": "/assets" },
-    { "src": "/socket.io/", "dest": "/socket.io/" }
+    { "src": "/socket.io/.*", "dest": "/src/app.js" }
   ]
 }
